# quiz-me

./: .Makefile.swp  .README.swp  .env  .gitignore  CHANGELOG.md  DEPENDENCIES.md  Dockerfile  LICENSE  Makefile  Pipfile  README  README.md  TESTING.md  TODO.md  docker-compose.yml  latest.dump.txt  log.txt  login.html  manage.py  mydb.db  mydb.sqlite3  pip.freeze  pyproject.toml  pytest.ini  requirements-debug.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  run.sh  tox.ini  unassimilated.md
db_dumps/: dump.quizme.2014.08.29_Fri_17.43.01  dump.quizme.2014.09.02_Tue_17.14.32.custom  dump.quizme.2014.09.02_Tue_17.15.22.custom  dump.quizme.2014.09.02_Tue_17.15.55.custom  dump.quizme.2014.09.02_Tue_17.16.30.custom  dump.quizme.2014.09.02_Tue_17.17.40.custom  dump.quizme.2014.09.02_Tue_17.18.56.custom  dump.quizme.2014.09.02_Tue_17.21.02.custom  dump.quizme.2014.09.02_Tue_17.28.30.custom  dump.quizme.2014.09.02_Tue_17.28.41.custom  dump.quizme.2014.09.02_Tue_17.30.37.custom  dump.quizme.2014.09.02_Tue_17.30.37.plain  dump.quizme.2014.09.02_Tue_17.37.44.custom  dump.quizme.2014.09.02_Tue_17.37.44.plain
emailusername/: .admin.py.swp  .models.py.swp  .views.py.swp  admin.py  models.py  views.py
emailusername/migrations/: 0001_initial.py  0002_auto_20170116_0937.py
questions/: .forms.py.swp  .models.py.swp  .views.py.swp  TagList.py  VerifyTagIds.py  __init__.py  _version.py  admin.py  forms.py  get_next_question.py  get_tag_hierarchy.py  models.py  test_helpers.py  test_management_commands.py  tests.py  util.py  views.py
questions/migrations/: 0001_initial.py  0002_auto_20170122_1214.py  0002_auto__add_schedule.py  0002_auto__del_user__add_field_attempt_datetime_updated__chg_field_attempt_.py  0002_delete_hint.py  0002_emailusername.py  0003_auto__add_usertag__add_questiontag.py  0003_auto__del_field_schedule_date_added__add_field_schedule_datetime_added.py  0003_delete_quiz.py  0004_auto__chg_field_schedule_interval_unit__chg_field_schedule_interval_nu.py  0004_querypreferences.py  0005_auto__add_field_schedule_percent_correct__add_field_schedule_percent_i.py  0005_remove_tag_users_delete_usertag.py  0007_delete_querypreferences.py  (+5 more)
quizme/: settings.py  urls.py  wsgi.py
quizme_website/: settings.py  urls.py  wsgi.py
templates/: answer.html  base.html  login.html  question.html  question_and_answer.html  quiz.html  show_question.html  show_question_and_answer.html
(+29 files in other folders)
