[tool.poetry]
name = "quiz-me"
version = "0.1.0"
description = ""
authors = ["Rob Bednark <rbednark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.*.*"
django = "3.*.*"
django-markdown-deux = "1.*.*"
django-pagedown = "2.*.*"
gunicorn = "20.*.*"
humanize = "3.*.*"
markdown2 = "2.*.*"
pillow = "8.*.*"
psycopg2 = "2.*.*"
py2-py3-django-email-as-username = "1.*.*"
pygments = "2.*.*"
python-dateutil = "2.*.*"
pytz = "2020.*"
six = "1.*.*"
sqlparse = "0.*.*"
urllib3 = "1.*.*"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "3.*.*"
django-extensions = "3.*.*"
pudb = "2020.*"
selenium = "3.*.*"
splinter = "0.*.*"
urwid = "2.*.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
