[tool.poetry]
name = "quiz-me"
version = "0.1.0"
description = ""
authors = ["Rob Bednark <rbednark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.*.*"
django = "4.*.*"
django-markdown-deux = "*.*.*"
django-pagedown = "*.*.*"
gunicorn = "*.*.*"
humanize = "*.*.*"
markdown2 = "*.*.*"
pillow = "*.*.*"
psycopg2 = "*.*.*"
py2-py3-django-email-as-username = "*.*.*"
pygments = "*.*.*"
python-dateutil = "*.*.*"
pytz = "*.*"
six = "*.*.*"
sqlparse = "*.*.*"
urllib3 = "*.*.*"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*.*.*"
django-extensions = "*.*.*"
pudb = "*.*"
selenium = "*.*.*"
splinter = "*.*.*"
urwid = "*.*.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
