[tool.poetry]
name = "quiz-me"
version = "0.1.0"
description = ""
authors = ["Rob Bednark <rbednark@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.1"
django = "5.*.*"
django-markdown-deux = "*.*.*"
django-pagedown = "*.*.*"
gunicorn = "*.*.*"
humanize = "*.*.*"
markdown2 = "*.*.*"
pillow = "*.*.*"
psycopg2 = "*.*.*"
py2-py3-django-email-as-username = "*.*.*"
pygments = "*.*.*"
python-dateutil = "*.*.*"
pytz = "*.*"
six = "*.*.*"
sqlparse = "*.*.*"
urllib3 = "*.*.*"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*.*.*"
django-extensions = "*.*.*"
djlint = "^1.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
